--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,9 @@
                            </head>
                         <body>
                              <div class="container">
-                             <img id="laughImg" alt="" />
+                             <img src="/va-logo-google.jpg" alt="vaLogo" />
+                             <img src="/apio-300.jpg" alt="vaLogo" />
+                             <img src="/aguacate-papelillo-300.jpg" alt="vaLogo" />
                              <h3>Don't Laugh Challenge</h3>
                              <div id="joke" class="joke"></div>
                              <button id="jokeBtn" class="btn">Get Another Joke</button>
